--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@girs/gjs": "^4.0.0-beta.14",
-    "@girs/gnome-shell": "^46.0.2"
+    "@girs/gnome-shell": "^46.0.2",
+    "@girs/soup-3.0": "^3.4.4-4.0.0-beta.14"
   }
 }
